# solar

./: .gitignore  README.md  Solar.ipynb  Swarm.ipynb  pyproject.toml  solar.py
